--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -725,12 +725,21 @@ a.bouton_5:hover {
 
 
   /*titre*/
-  .titre {
-   
-    width: auto ;
-    text-align: center;
-
+   .titre_1 {
+       width: 100%;
+       height: 90px;
+       display: flex;
+       justify-content: center;
+       flex-direction: column;
+      
+       margin-bottom: 15px;
+       margin-top: 15px;
    }
+  .titre {
+    width: auto;
+    text-align:center;
+   }
+ 
 
    .soustitre {
     width: auto;
@@ -743,26 +752,49 @@ a.bouton_5:hover {
     width: auto;
     display: flex;
     justify-content: center;
+   
 
 }
-.text_recherche {
-    width: 240px;
+.border {
+    border: solid 2px  rgb(214, 213, 213);
+    border-right: none;
+    border-radius:  0 25px 25PX 0;
+    
 }
+
+.text_recherche {
+    width: 210px;
+   
+    border: none;
+   
+}
+
+
+
+
 .titre_fitres {
  width: 70px;
    
 }
+.point_recherche {
+    height: 55px;
+
+    
+}
 .recherche_bouton_1 {
-    width: 50px ;
-    height: 40px;
+    height: 50px;
+    width: 50px;
     background-color:rgb(3, 70, 214) ;
     color: rgb(252, 252, 252);
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 15px 15px 15px 15px;
     font-size: 20px;
     text-align: center;
     border: none;
     cursor: pointer;
-   
+}
+.recherche_bouton_1:hover {
+    color: rgb(179, 177, 177);
+    
 }
 
 .recherche_bouton {
@@ -815,20 +847,17 @@ a.bouton_5:hover {
 
 .cards_alinement {
     width: 100%;
-   display: flex;
-   
-   
-
- 
-   
+   display: flex; 
 }
-
+.bloc_titre{
+    width: 250px;
+}
+.afiche {
+    width: 131px;
+}
 .bloc_1 {
    width: 100%;
-    background-color: white;
-  
-
-    
+    background-color: white;   
  }
 
 
@@ -858,8 +887,45 @@ a.bouton_5:hover {
   p {
       height: 18px; 
   }
+.titre_bloc_3 {
+    width: 200px;
+}
+ .card_3_3 {
+    width: 340px;
+    height: 210px; 
+}
+.image_3_2 {
+    width: 340px;
+    height: 150px;
+    
+}
+.card_3_2 {
+    width: 340px;
+    height: 210px;
+   
+}
 
- 
+.image_3_1 {
+    width: 340px;
+    height: 150px;
+  
+}
+
+.image_3 {
+    width: 340px;
+    height: 150px;
+   
+}
+
+.card_3_1 {
+    width: 340px;
+    height: 210px ;
+   
+ }
+ footer {
+    padding-left: 15px;
+ }
+  
   }
 
 
